added pie chart to results page

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -55,6 +55,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/materialize/bin/materialize.js"></script>
+    <script src="bower_components/Chart.js/Chart.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
