--- a/client/app/index.html
+++ b/client/app/index.html
@@ -14,6 +14,9 @@
     <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
   </head>
   <body ng-app="materialPollApp">
+    <div class="ribbon">
+      <a href="https://github.com/nearbycoder/materialpoll">Fork me on GitHub</a>
+    </div>
     <div class="header">
       <nav>
         <div class="nav-wrapper blue darken-4">
