fix issue with github fork ribbon extending body to whitespace

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -14,8 +14,10 @@
     <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
   </head>
   <body ng-app="materialPollApp">
-    <div class="ribbon">
-      <a href="https://github.com/nearbycoder/materialpoll">Fork me on GitHub</a>
+    <div style="position:absolute;overflow:hidden;width:100%;height:100vh;">
+      <div class="ribbon">
+        <a href="https://github.com/nearbycoder/materialpoll">Fork me on GitHub</a>
+      </div>
     </div>
     <div class="header">
       <nav>
