removed footer for mobile and adjusted footer so its not absolute

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -32,7 +32,7 @@
       <div ui-view=""></div>
     </div>
 
-    <div class="footer">
+    <div class="footer hide-small">
      <footer class="page-footer blue darken-4">
           <div class="container">
             <div class="row">
